--- a/infra/k8s/comments-depl.yaml
+++ b/infra/k8s/comments-depl.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts-depl
+  name: comments-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: posts
+      app: comments
   template:
     metadata:
       labels:
-        app: posts
+        app: comments
     spec:
       containers:
-      - name: posts
-        image: aml132/posts:latest
+      - name: comments
+        image: aml132/comments:latest
         imagePullPolicy: Never
 
 
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clusterip-srv
+  name: comments-clusterip-srv
 spec:
   selector:
-    app: posts
+    app: comments
   ports:
-  - port: 4000
-    targetPort: 4000
+  - port: 4001
+    targetPort: 4001
     protocol: TCP
-    name: posts
+    name: comments
