--- a/infra/k8s/event-bus-depl.yaml
+++ b/infra/k8s/event-bus-depl.yaml
@@ -1,36 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts-depl
+  name: event-bus-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: posts
+      app: event-bus
   template:
     metadata:
       labels:
-        app: posts
+        app: event-bus
     spec:
       containers:
       - name: posts
-        image: aml132/posts:latest
+        image: aml132/event-bus:latest
         imagePullPolicy: Never
 
 
-
-
-
+        
 --- 
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clusterip-srv
+  name: event-bus-srv
 spec:
   selector:
-    app: posts
+    app: event-bus
   ports:
-  - port: 4000
-    targetPort: 4000
+  - port: 4005
+    targetPort: 4005
     protocol: TCP
-    name: posts
+    name: event-bus
