--- a/infra/k8s/query-depl.yaml
+++ b/infra/k8s/query-depl.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts-depl
+  name: query-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: posts
+      app: query
   template:
     metadata:
       labels:
-        app: posts
+        app: query
     spec:
       containers:
-      - name: posts
-        image: aml132/posts:latest
+      - name: query
+        image: aml132/query:latest
         imagePullPolicy: Never
 
 
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clusterip-srv
+  name: query-clusterip-srv
 spec:
   selector:
-    app: posts
+    app: query
   ports:
-  - port: 4000
-    targetPort: 4000
+  - port: 4002
+    targetPort: 4002
     protocol: TCP
-    name: posts
+    name: query
